--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -34,16 +34,15 @@
             <li class="divider"></li>
             <li><a href="#">Otros</a></li>
             <li class="divider"></li>
-            <li><a href="{{path('reserva')}}">Reservas - Prueba</a></li>            
-            <li><a href="{{path('reserva_index2')}}">Reservas - Index2</a></li>            
           </ul>
         </li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Reservas<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Actividades</a></li>
-            <li><a href="#">Cursos</a></li>
+            <li><a href="{{path('reserva')}}">Listado</a></li>
+            <li><a href="{{path('reserva_index2')}}">Listado - Ordenado por Fecha/Hora</a></li>
+            <li><a href="{{path('ReservasMain')}}">Listado - Con filtro de busqueda</a></li>
           </ul>
         </li>
         
