--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
@@ -11,3 +11,19 @@
         </a>
     
 {% endblock %}
+{% block javascripts -%}
+    <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js')}}"></script>
+    <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.es.min.js')}}"></script>
+    <script type="text/javascript">
+        $('.fechareservada_input_text').datepicker({
+            startDate: "{{ "now"|date('Y-m-d')}}",
+            endDate: "{{ "now"|date_modify('+1 Year')|date('Y-m-d')}}",
+            todayBtn: "linked",
+            format: "yyyy-m-d",
+            clearBtn: true,
+            language: "es",
+            orientation: "top auto",
+            autoclose: true
+        });
+    </script>
+{% endblock %}
