--- a/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
@@ -2,84 +2,91 @@
 
 {% block body -%}
     <div class="container">
-    <h1>Listado de Reservas</h1>
-    <div class="row">
-    <div class="col-md-11 col-md-offset-1">    
-    <form id="formulariobase">
+        <h1>Listado de Reservas</h1>
+        <div class="row">
+            <div class="col-md-11 col-md-offset-1">    
+                <form id="formulariobase">
 
-        <div class="input-daterange input-group" id="datepicker" class="datepicker">
-            <label class="col-sm-1 col-lg-1 control-label" for="fechadesde">Desde</label>
-            <div class="col-sm-2 col-lg-2">
-                <input type="text" class="form-control" id="fechadesde" name="fechadesde" size="10" value="{{ "now"|date('Y-m-d')}}"/>
+                    <div class="input-daterange input-group" id="datepicker" class="datepicker">
+                        <label class="col-sm-1 col-lg-1 control-label" for="fechadesde">Desde</label>
+                        <div class="col-sm-2 col-lg-2">
+                            <input type="text" class="form-control" id="fechadesde" name="fechadesde" size="10" value="{{ "now"|date('Y-m-d')}}"/>
+                        </div>
+                        <label class="col-sm-1 col-lg-1 control-label" for="fechahasta">hasta</label>
+                        <div class="col-sm-2 col-lg-2">
+                            <input type="text" class="form-control" id="fechahasta" name="fechahasta" size="10" value="{{ "now"|date_modify('+7 days')|date('Y-m-d')}}"/>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">    
+                        <select name="evento" class="form-control">
+                            <option value="0">TODOS LOS EVENTOS</option>
+                            {% for evento in eventos %}
+                                <option value="{{ evento.id }}">{{ evento.getNombre() }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-sm-4">
+                        <select name="aula" class="form-control">
+                            <option value="0">TODAS LAS AULAS</option>
+                            {% for aula in aulas %}
+                                <option value="{{ aula.id }}">{{ aula.getNombre() }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-sm-4">
+                        <select name="docente" class="form-control">
+                            <option value="0">TODOS LOS DOCENTES</option>
+                            {% for docente in docentes %}
+                                <option value="{{ docente.id }}">{{ docente.getNombre() }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    {# <p>Date: <input type="text" id="datepicker" size="30"></p> #}
+                    {#
+                    <div class="input-group date alone">
+                      <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+                    </div> 
+                    #}
+
+                </form>
+            </div>    
+        </div>
+
+        <div class="row">
+            <div class="col-md-11 col-md-offset-1">    
+                <p><button id="btnFiltro" class="btn btn-default">Aplicar Filtro</button></p>
+
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Fecha</th>
+                            <th>Desde</th>
+                            <th>Hasta</th>
+                            <th>Evento</th>
+                            <th>Aula</th>
+                            <th>Estado</th>
+                            <th>Observacion</th>
+                            <th>Recursos</th>
+                            <th>Reservado</th>
+                            <th>Docente</th>
+                                {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                                <th>Acciones</th>
+                                {% endif %}
+                        </tr>
+                    </thead>
+                    <tbody class="listado_tabla">
+                    </tbody>
+                </table>
             </div>
-            <label class="col-sm-1 col-lg-1 control-label" for="fechahasta">hasta</label>
-            <div class="col-sm-2 col-lg-2">
-                <input type="text" class="form-control" id="fechahasta" name="fechahasta" size="10" value="{{ "now"|date_modify('+7 days')|date('Y-m-d')}}"/>
-            </div>
         </div>
-        
-        <div class="col-sm-4">    
-        <select name="evento" class="form-control">
-            <option value="0">TODOS LOS EVENTOS</option>
-            {% for evento in eventos %}
-                <option value="{{ evento.id }}">{{ evento.getNombre() }}</option>
-            {% endfor %}
-        </select>
-        </div>
-        <div class="col-sm-4">
-        <select name="aula" class="form-control">
-            <option value="0">TODAS LAS AULAS</option>
-            {% for aula in aulas %}
-                <option value="{{ aula.id }}">{{ aula.getNombre() }}</option>
-            {% endfor %}
-        </select>
-        </div>
-        <div class="col-sm-4">
-        <select name="docente" class="form-control">
-            <option value="0">TODOS LOS DOCENTES</option>
-            {% for docente in docentes %}
-                <option value="{{ docente.id }}">{{ docente.getNombre() }}</option>
-            {% endfor %}
-        </select>
-        </div>
-        
-        {# <p>Date: <input type="text" id="datepicker" size="30"></p> #}
-        {#
-        <div class="input-group date alone">
-          <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-        </div> 
-        #}
+    </div>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+    <p><a class="btn btn-primary" href="{{ path('reserva_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
+    {% endif %}
 
-    </form>
-    </div>    
-    </div>
-        
-    <div class="row">
-    <div class="col-md-11 col-md-offset-1">    
-    <p><button id="btnFiltro" class="btn btn-default">Aplicar Filtro</button></p>
-
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Fecha</th>
-                <th>Desde</th>
-                <th>Hasta</th>
-                <th>Evento</th>
-                <th>Aula</th>
-                <th>Estado</th>
-                <th>Observacion</th>
-                <th>Recursos</th>
-                <th>Reservado</th>
-                <th>Docente</th>
-            </tr>
-        </thead>
-        <tbody class="listado_tabla">
-        </tbody>
-    </table>
-    </div>
-    </div>
-    </div>
 {% endblock %}
 
 {% block stylesheets %}
@@ -102,39 +109,42 @@
                 orientation: "top auto",
                 todayHighlight: true
             });
-                
+
             $("#btnFiltro").click(function () {
                 $(".listado_tabla_item").remove();
                 //$.getJSON("https://127.0.0.1/reservas/web/app_dev.php/listadoReservas", 
-                var pFechadesde = $("#formulariobase :input[name='fechadesde']").val(); 
+                var pFechadesde = $("#formulariobase :input[name='fechadesde']").val();
                 var pFechahasta = $("#formulariobase :input[name='fechahasta']").val();
                 var pEvento = $("#formulariobase :input[name='evento']").val();
                 var pAula = $("#formulariobase :input[name='aula']").val();
                 var pDocente = $("#formulariobase :input[name='docente']").val();
                 $.getJSON("listadoReservas",
-                    { fechadesde: pFechadesde, 
-                        fechahasta: pFechahasta,
-                        evento: pEvento,
-                        aula: pAula,
-                        docente: pDocente  
-                    },
-                    function(result){
-                        $.each(result, function(i, field){                            
-                            var tabla_item = "";
-                            tabla_item = "<tr class='listado_tabla_item'>";
-                            tabla_item = tabla_item + "<td>" + field.id + "</td>";
-                            tabla_item = tabla_item + "<td>" + field.fecha + "</td>";
-                            tabla_item = tabla_item + "<td>" + field.horadesde + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.horahasta + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.evento + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.aula + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.estado + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.observacion + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.recursos + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.reservado + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.docente + "</th>";
-                            tabla_item = tabla_item + "</tr>";
-                            $(".listado_tabla").append(tabla_item);
+                        {fechadesde: pFechadesde,
+                            fechahasta: pFechahasta,
+                            evento: pEvento,
+                            aula: pAula,
+                            docente: pDocente
+                        },
+                function (result) {
+                    $.each(result, function (i, field) {
+                        var tabla_item = "";
+                        tabla_item = "<tr class='listado_tabla_item'>";
+                        tabla_item = tabla_item + "<td>" + field.id + "</td>";
+                        tabla_item = tabla_item + "<td>" + field.fecha + "</td>";
+                        tabla_item = tabla_item + "<td>" + field.horadesde + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.horahasta + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.evento + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.aula + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.estado + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.observacion + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.recursos + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.reservado + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.docente + "</th>";
+        {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        tabla_item = tabla_item + "<td><ul><a href=\"admin/reserva/" + field.id + "/edit\"><span class=\"glyphicon glyphicon-pencil\"></span>editar</a></ul></th>";
+        {% endif %}
+                        tabla_item = tabla_item + "</tr>";
+                        $(".listado_tabla").append(tabla_item);
                         });
                     });
                 });
