--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/edit.html.twig
@@ -1,16 +1,16 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Edificio edit</h1>
+    <h1>Edificio - Edición</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('edificio') }}">
-            Back to the list
+        
+    
+        <a class="btn btn-primary" href="{{ path('edificio') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+            Volver a la lista
         </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    
+     {{ form(delete_form) }}
+
 {% endblock %}
