Se agrega el stylesheet, a las fechas especiales. Se agrega el mensaje flash luego de Agregar o Modificar un registro. Despues de Agregar o Modificar un registro, se vuelve al listado de Reserva.

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
@@ -1,5 +1,9 @@
 {% extends '::base.html.twig' %}
 
+{% block stylesheets -%}
+    <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.standalone.min.css')}}" />
+{% endblock %}
+
 {% block body -%}
     <h1>Fechas Especiales - Creación</h1>
 
