--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/index.html.twig
@@ -2,6 +2,12 @@
 
 {% block body -%}
     <h1>Reservas</h1>
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="alert alert-danger flash-notice">
+            <span aria-hidden="true">{{ flashMessage }}</span>
+        </div>
+    {% endfor %}
+
     <p><a class="btn btn-primary" href="{{ path('reserva_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
     <table class="table table-bordered records_list">
         <thead>
