--- a/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>TipoActividad edit</h1>
+    <h1>Editar el tipo de actividad</h1>
 
     {{ form_start(edit_form) }}
         {{ form_errors(edit_form) }}
@@ -22,11 +22,10 @@
         
         {{ form_end(edit_form) }}
 
-    <li>
-        <a href="{{ path('tipoactividad') }}">
+        <a class="btn btn-primary" href="{{ path('tipoactividad') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
             Volver a la lista
         </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+   
+    {{ form(delete_form) }}
+
 {% endblock %}
