Index usuarios y navbar

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -30,6 +30,7 @@
             <li><a href="{{path('actividad')}}">Actividades</a></li>            
             <li><a href="{{path('tipoactividad')}}">Tipos de actividad</a></li>            
             <li><a href="{{path('fechaespecial')}}">Fechas especiales</a></li>
+            <li><a href="{{path('admin_user')}}">Usuarios</a></li>
           </ul>
         </li>
 
