--- a/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/index.html.twig
@@ -16,8 +16,8 @@
         <thead>
             <tr>
                 <th>Nombre</th>
-                <th>Cantidadhoras</th>
-                <th>Actions</th>
+                <th>Cant. de horas</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
