--- a/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/TipoActividad/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Editar el tipo de actividad</h1>
+    <h1>Edición del tipo de actividad</h1>
 
     {{ form_start(edit_form) }}
         {{ form_errors(edit_form) }}
