--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -11,12 +11,12 @@
             <form action="{{ path("fos_user_security_check") }}" method="post">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
                 <label for="username">{{ 'security.login.username'|trans }}</label><br>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" /><br>
+                <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" /><br>
                 <label for="password">{{ 'security.login.password'|trans }}</label><br>
-                <input type="password" id="password" name="_password" required="required" /><br>
-                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                <input class="form-control" type="password" id="password" name="_password" required="required" /><br>
+                <input class="" type="checkbox" id="remember_me" name="_remember_me" value="on" />
                 <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label><br>
-                <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                <input class="btn btn-default" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
             </form>
         </div>
     </div>
