--- a/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -5,7 +5,7 @@
         <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
             {{ form_widget(form) }}
             <div>
-                <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+                <button class="btn btn-default" type="submit" value="{{ 'change_password.submit'|trans }}"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Cambiar contraseña</button>
             </div>
         </form>
     </div>
