--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -47,10 +47,10 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ app.user.username }}<span class="caret"></span></a>       
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ app.user.username }}<span class="caret"></span></a>       
           <ul class="dropdown-menu" role="Usuario">
-            <li><a href="{{ path('fos_user_change_password')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Cambiar password</a></li>
-            <li><a href="{{ path('fos_user_security_logout')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Salir</a></li>
+            <li><a href="{{ path('fos_user_change_password')}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Cambiar password</a></li>
+            <li><a href="{{ path('fos_user_security_logout')}}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Salir</a></li>
           </ul>
         </li>
       </ul>
@@ -60,8 +60,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ingresar<span class="caret"></span></a>       
           <ul class="dropdown-menu" role="Usuario">
-            <li><a href="{{ path('fos_user_security_login')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Ingresar al sistema</a></li>
-            <li><a href="{{ path('fos_user_resetting_request')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Olvide mi password</a></li>
+            <li><a href="{{ path('fos_user_security_login')}}"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Ingresar al sistema</a></li>
+            <li><a href="{{ path('fos_user_resetting_request')}}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Olvide mi password</a></li>
           </ul>
         </li>
       </ul>
