--- a/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
@@ -62,7 +62,7 @@
 
     <div class="row">
         <div class="col-md-11 col-md-offset-1">    
-            <p><button id="btnFiltro" class="btn btn-default">Aplicar Filtro</button></p>
+            <p><button id="btnFiltro" class="btn btn-default"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span> Aplicar Filtro</button></p>
 
             <table class="table table-bordered">
                 <thead>
@@ -90,72 +90,76 @@
     </div>
 
     {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <p><a class="btn btn-primary" href="{{ path('reserva_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
+        <div class="row">
+            <div class="col-md-11 col-md-offset-1"> 
+                <p><a class="btn btn-primary" href="{{ path('reserva_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
+            </div>
+        </div>
+    {% endif %}
+
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.standalone.min.css')}}" />
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js')}}"></script>
+    <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.es.min.js')}}"></script>
+    <script>
+        $(document).ready(function() {
+            $('.input-daterange.input-group').datepicker({
+                format: "yyyy-mm-dd",
+                startDate: "2014/01/01",
+                endDate: "2016/12/31",
+                todayBtn: "linked",
+                clearBtn: true,
+                language: "es",
+                autoclose: true,
+                orientation: "top auto",
+                todayHighlight: true
+            });
+
+            $("#btnFiltro").click(function() {
+                $(".listado_tabla_item").remove();
+                //$.getJSON("https://127.0.0.1/reservas/web/app_dev.php/listadoReservas", 
+                var pFechadesde = $("#formulariobase :input[name='fechadesde']").val();
+                var pFechahasta = $("#formulariobase :input[name='fechahasta']").val();
+                var pEvento = $("#formulariobase :input[name='evento']").val();
+                var pAula = $("#formulariobase :input[name='aula']").val();
+                var pDocente = $("#formulariobase :input[name='docente']").val();
+                $.getJSON("listadoReservas",
+                        {fechadesde: pFechadesde,
+                            fechahasta: pFechahasta,
+                            evento: pEvento,
+                            aula: pAula,
+                            docente: pDocente
+                        },
+                function(result) {
+                    $.each(result, function(i, field) {
+                        var tabla_item = "";
+                        tabla_item = "<tr class='listado_tabla_item'>";
+                        tabla_item = tabla_item + "<td>" + field.id + "</td>";
+                        tabla_item = tabla_item + "<td>" + field.fecha + "</td>";
+                        tabla_item = tabla_item + "<td>" + field.horadesde + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.horahasta + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.evento + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.aula + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.estado + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.observacion + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.recursos + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.reservado + "</th>";
+                        tabla_item = tabla_item + "<td>" + field.docente + "</th>";
+        {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                            tabla_item = tabla_item + "<td><ul><a href=\"admin/reserva/" + field.id + "/edit\"><span class=\"glyphicon glyphicon-pencil\"></span>editar</a></ul></th>";
         {% endif %}
-
-    {% endblock %}
-
-    {% block stylesheets %}
-        <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.standalone.min.css')}}" />
-    {% endblock %}
-
-    {% block javascripts %}
-        <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js')}}"></script>
-        <script src="{{ asset('bundles/untdfreservasaulas/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.es.min.js')}}"></script>
-        <script>
-            $(document).ready(function() {
-                $('.input-daterange.input-group').datepicker({
-                    format: "yyyy-mm-dd",
-                    startDate: "2014/01/01",
-                    endDate: "2016/12/31",
-                    todayBtn: "linked",
-                    clearBtn: true,
-                    language: "es",
-                    autoclose: true,
-                    orientation: "top auto",
-                    todayHighlight: true
-                });
-
-                $("#btnFiltro").click(function() {
-                    $(".listado_tabla_item").remove();
-                    //$.getJSON("https://127.0.0.1/reservas/web/app_dev.php/listadoReservas", 
-                    var pFechadesde = $("#formulariobase :input[name='fechadesde']").val();
-                    var pFechahasta = $("#formulariobase :input[name='fechahasta']").val();
-                    var pEvento = $("#formulariobase :input[name='evento']").val();
-                    var pAula = $("#formulariobase :input[name='aula']").val();
-                    var pDocente = $("#formulariobase :input[name='docente']").val();
-                    $.getJSON("listadoReservas",
-                            {fechadesde: pFechadesde,
-                                fechahasta: pFechahasta,
-                                evento: pEvento,
-                                aula: pAula,
-                                docente: pDocente
-                            },
-                    function(result) {
-                        $.each(result, function(i, field) {
-                            var tabla_item = "";
-                            tabla_item = "<tr class='listado_tabla_item'>";
-                            tabla_item = tabla_item + "<td>" + field.id + "</td>";
-                            tabla_item = tabla_item + "<td>" + field.fecha + "</td>";
-                            tabla_item = tabla_item + "<td>" + field.horadesde + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.horahasta + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.evento + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.aula + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.estado + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.observacion + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.recursos + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.reservado + "</th>";
-                            tabla_item = tabla_item + "<td>" + field.docente + "</th>";
-            {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                                tabla_item = tabla_item + "<td><ul><a href=\"admin/reserva/" + field.id + "/edit\"><span class=\"glyphicon glyphicon-pencil\"></span>editar</a></ul></th>";
-            {% endif %}
-                                tabla_item = tabla_item + "</tr>";
-                                $(".listado_tabla").append(tabla_item);
-                            });
+                            tabla_item = tabla_item + "</tr>";
+                            $(".listado_tabla").append(tabla_item);
                         });
                     });
                 });
-        </script>
+            });
+    </script>
 
-    {% endblock %}
+{% endblock %}
 
