--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -34,14 +34,16 @@
           </ul>
         </li>
 
-        <li class="dropdown">
+        {# <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Reservas<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="{{path('reserva')}}">Listado</a></li>
             <li><a href="{{path('reserva_index2')}}">Listado - Ordenado por Fecha/Hora</a></li>
-            <li><a href="{{path('ReservasMain')}}">Listado - Con filtro de busqueda</a></li>
+            <li><a href="{{path('reserva_index_filtrado')}}">Listado - Con filtro de busqueda</a></li>
           </ul>
-        </li>
+        </li> #}
+        
+        <li><a href="{{path('reserva_index_filtrado')}}">Reservas</a></li>
         
       </ul>
 
