--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> UNTDF</a>
+      <a class="navbar-brand" href="{{path('reserva_index_filtrado')}}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> UNTDF</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
