--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
@@ -6,6 +6,12 @@
 
 {% block body -%}
     <h1>Reserva - Agregar</h1>
+    
+                {% for flashMessage in app.session.flashbag.get('notice') %}
+                    <div class="alert alert-danger flash-notice">
+                        <span aria-hidden="true">{{ flashMessage }}</span>
+                    </div>
+                {% endfor %}
 
     {# {{ form(form) }} #}
     <div class="row">
