ReservaType Correccion del format del campo input de fecha Correccion en el edit y new.

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
@@ -51,7 +51,7 @@
             startDate: "{{ "now"|date('Y-m-d')}}",
             endDate: "{{ "now"|date_modify('+1 Year')|date('Y-m-d')}}",
             todayBtn: "linked",
-            format: "yyyy-m-d",
+            format: "yyyy-mm-dd",
             clearBtn: true,
             language: "es",
             orientation: "top auto",
