detalles de vistas

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Nueva Carrera</h1>
+    <h1>Carrera - Creación</h1>
 
     {{ form(form) }}
     
