--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Curso/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Curso/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Nuevo Curso</h1>
+    <h1>Curso - Creación</h1>
 
     {{ form(form) }}
 
