--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Actividad/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Nueva Actividad</h1>
+    <h1>Actividad - Creación</h1>
 
     {{ form(form) }}
 
