--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
     
-    <h1>Edición de Carrera</h1>
+    <h1>Carrera - Edición</h1>
 
     {{ form_start(edit_form) }}
     {{ form_errors(edit_form) }}
