--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Carrera/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Lista de Carreras</h1>
+    <h1>Carreras</h1>
 
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-success flash-notice">
