--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Curso/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Curso/new.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
-
+{% block stylesheets -%}
+    <link rel="stylesheet" tyep="text/html" href="{{ asset('bundles/untdfreservasaulas/js/vendor/select2/css/select2.min.css')}}" />
+{% endblock %}
 {% block body -%}
     <h1>Curso - Creación</h1>
 
@@ -8,4 +10,10 @@
     <a class="btn btn-primary" href="{{ path('curso') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
             Volver a la lista
         </a>
+{% endblock %}
+{% block javascripts -%}
+    <script src="{{ asset('bundles/untdfreservasaulas/js/vendor/select2/js/select2.min.js')}}"></script>
+    <script type="text/javascript">
+        $('select').select2();
+    </script>
 {% endblock %}
