Reserva * Correccion del color y la posicion de las alertas. Ahora tiene el mismo color que el resto, y su posicion es sobre el area de visualizacion.

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/edit.html.twig
@@ -8,7 +8,7 @@
     <h1>Reserva - Modificar/Editar</h1>
                 
     {% for flashMessage in app.session.flashbag.get('notice') %}
-                    <div class="alert alert-danger flash-notice">
+                    <div class="alert alert-success flash-notice">
                         <span aria-hidden="true">{{ flashMessage }}</span>
                     </div>
                 {% endfor %}
